# VNC-Al-e

./: CMakeLists.txt  README.md
src/: Common.cpp  Common.hpp  Image.cpp  Image.hpp  Pixel.cpp  Pixel.hpp  main.cpp
